@@ -161,7 +161,7 @@ class FtpTransport(Transport):
             mutter("FTP has not: %s" % self._abspath(relpath))
             return False
 
-    def get(self, relpath, decode=False):
+    def get(self, relpath):
         """Get the file at the given relative path.
 
         :param relpath: The relative path to the file
